--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -114,7 +114,7 @@ body::-webkit-scrollbar-thumb {
 	color: white;
 }
 
-.material-icons.md-18 { font-size: 18px; }
+.material-icons.md-18 { font-size: 1.4vmax; }
 .material-icons.md-24 { font-size: 2.8vmax; }
 .material-icons.md-36 { font-size: 36px; }
 .material-icons.md-48 { font-size: 48px; }
@@ -181,7 +181,16 @@ body::-webkit-scrollbar-thumb {
 	flex-direction: column;
 	justify-content: center;
 	align-items: flex-start;
+	z-index: 1;
 	//background: purple;
+	pointer-events: none;
+	-webkit-touch-callout: none; /* iOS Safari */
+    -webkit-user-select: none; /* Safari */
+     -khtml-user-select: none; /* Konqueror HTML */
+       -moz-user-select: none; /* Old versions of Firefox */
+        -ms-user-select: none; /* Internet Explorer/Edge */
+            user-select: none; /* Non-prefixed version, currently
+                                  supported by Chrome, Edge, Opera and Firefox */
 }
 
 .block__header-headline .highlight {
@@ -215,6 +224,7 @@ body::-webkit-scrollbar-thumb {
 	border: none;
 	width: auto;
 	height: auto;
+	pointer-events: auto;
 	transition: 200ms ease-in-out;
 }
 
@@ -228,6 +238,8 @@ body::-webkit-scrollbar-thumb {
 .block__phone img {
 	height: auto;
 	width: 60%;
+	z-index: 1;
+	pointer-events: none;
 }
 
 // For Desktop Devices - 1024px to largest
@@ -414,12 +426,17 @@ body::-webkit-scrollbar-thumb {
 	flex-direction: column;
 	width: fit-content;
 	border-left: 2px solid white;
-	padding-left: 4vmax;
+	padding-left: calc(3vw + 3vh);
 }
 
 .exp__card {
 	margin-bottom: 4vmin;
 	position: relative;
+	transition: 0.5s ease-in-out;
+    -webkit-transition: opacity 0.5s linear;
+    -moz-transition: opacity 0.5s linear;
+    -o-transition: opacity 0.5s linear;
+    -ms-transition: opacity 0.5s linear;
 }
 
 .exp__card::before {
@@ -432,7 +449,7 @@ body::-webkit-scrollbar-thumb {
 	border: 1vmin solid $primary-color;
 	position: absolute;
 	top: 15%;
-	left: -4.5vmax;
+	left: calc(-3.5vw - 3.5vh);
 }
 
 .exp__card-header {
@@ -442,6 +459,12 @@ body::-webkit-scrollbar-thumb {
 .exp__card-body {
 	padding: 1vmin 2vmin;
 	display: none;
+	//width: min-content;
+	transition: 0.5s ease-in-out;
+    -webkit-transition: opacity 0.5s linear;
+    -moz-transition: opacity 0.5s linear;
+    -o-transition: opacity 0.5s linear;
+    -ms-transition: opacity 0.5s linear;
 }
 
 .exp__card-footer {
