--- a/styles/styles.css
+++ b/styles/styles.css
@@ -10834,7 +10834,7 @@ body::-webkit-scrollbar {
 }
 
 body::-webkit-scrollbar-track {
-  background: #2D2E32;
+  background: #2d2e32;
 }
 
 body::-webkit-scrollbar-thumb {
@@ -10887,6 +10887,7 @@ body::-webkit-scrollbar-thumb {
       -ms-flex-align: center;
           align-items: center;
   z-index: -2;
+  color: black;
   font-size: calc(4vw + 4vh);
   font-weight: 800;
 }
@@ -10983,7 +10984,7 @@ body::-webkit-scrollbar-thumb {
 }
 
 .block__header-headline .highlight {
-  color: #246BFE;
+  color: #246bfe;
   font-weight: 300;
 }
 
@@ -11013,7 +11014,7 @@ body::-webkit-scrollbar-thumb {
           align-items: center;
   font-weight: 500;
   color: white;
-  background: #246BFE;
+  background: #246bfe;
   border-radius: 0.8vmin;
   border: none;
   width: auto;
@@ -11025,7 +11026,7 @@ body::-webkit-scrollbar-thumb {
 
 .block__header-button:hover,
 .block__header-button:focus {
-  background: #2955E5;
+  background: #2955e5;
 }
 
 .block__phone img {
@@ -11072,7 +11073,7 @@ body::-webkit-scrollbar-thumb {
   min-height: -webkit-fit-content;
   min-height: -moz-fit-content;
   min-height: fit-content;
-  background: #2D2E32;
+  background: #2d2e32;
   border-radius: 0.5vmin;
   border-top: 1vmin solid black;
   -webkit-transition: 250ms ease-in-out;
@@ -11081,10 +11082,11 @@ body::-webkit-scrollbar-thumb {
           box-shadow: 0 20px 20px rgba(0, 0, 0, 0.08);
 }
 
-.skills__card:hover, .skills__card:focus {
+.skills__card:hover,
+.skills__card:focus {
   -webkit-box-shadow: 0 40px 40px rgba(0, 0, 0, 0.16);
           box-shadow: 0 40px 40px rgba(0, 0, 0, 0.16);
-  border-top: 1vmin solid #246BFE;
+  border-top: 1vmin solid #246bfe;
   -webkit-transform: translate(0, -1vmin);
           transform: translate(0, -1vmin);
 }
@@ -11222,7 +11224,6 @@ body::-webkit-scrollbar-thumb {
 }
 
 .timeline__container {
-  width: auto;
   height: auto;
   display: -webkit-box;
   display: -ms-flexbox;
@@ -11234,32 +11235,39 @@ body::-webkit-scrollbar-thumb {
   -webkit-box-direction: normal;
       -ms-flex-direction: column;
           flex-direction: column;
-  width: -webkit-fit-content;
-  width: -moz-fit-content;
-  width: fit-content;
   border-left: 2px solid white;
   padding-left: calc(3vw + 3vh);
 }
 
 .exp__card {
+  width: 50%;
   margin-bottom: 4vmin;
   position: relative;
-  -webkit-transition: 0.5s ease-in-out;
-  transition: 0.5s ease-in-out;
+  -webkit-transition: 250ms ease-in-out;
+  transition: 250ms ease-in-out;
+  border-left: 1vmin solid black;
+  border-radius: 0.5vmin;
   -webkit-transition: opacity 0.5s linear;
   -moz-transition: opacity 0.5s linear;
   -o-transition: opacity 0.5s linear;
   -ms-transition: opacity 0.5s linear;
 }
 
+.exp__card:hover,
+.exp__card:focus {
+  -webkit-box-shadow: 0 40px 40px rgba(0, 0, 0, 0.16);
+          box-shadow: 0 40px 40px rgba(0, 0, 0, 0.16);
+  border-left: 1vmin solid #246bfe;
+}
+
 .exp__card::before {
-  content: '';
+  content: "";
   display: block;
   width: 1vmin;
   height: 1vmin;
   border-radius: 50%;
-  background-color: #246BFE;
-  border: 1vmin solid #246BFE;
+  background-color: #246bfe;
+  border: 1vmin solid #246bfe;
   position: absolute;
   top: 15%;
   left: calc(-3.5vw - 3.5vh);
@@ -11274,6 +11282,8 @@ body::-webkit-scrollbar-thumb {
   display: none;
   -webkit-transition: 0.5s ease-in-out;
   transition: 0.5s ease-in-out;
+  -webkit-transition: 250ms ease-in-out;
+  transition: 250ms ease-in-out;
   -webkit-transition: opacity 0.5s linear;
   -moz-transition: opacity 0.5s linear;
   -o-transition: opacity 0.5s linear;
@@ -11289,6 +11299,80 @@ body::-webkit-scrollbar-thumb {
   -webkit-box-direction: normal;
       -ms-flex-direction: row;
           flex-direction: row;
+}
+
+footer {
+  padding: 4vh 8vw;
+  background-color: black;
+}
+
+.block__links {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  gap: 8vmin;
+}
+
+ul {
+  margin: 0;
+  padding: 0;
+}
+
+.block__copyright {
+  height: -webkit-fit-content;
+  height: -moz-fit-content;
+  height: fit-content;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  margin-top: 4vmin;
+  border-radius: 1vmin;
+  padding-top: 4vmin;
+  padding-bottom: 4vmin;
+  margin-bottom: 8vmin;
+  background-color: #1a1b1e;
+  -webkit-transition: 250ms ease-in-out;
+  transition: 250ms ease-in-out;
+}
+
+.block__copyright:hover {
+  -webkit-box-shadow: 0 40px 40px rgba(0, 0, 0, 0.16);
+          box-shadow: 0 40px 40px rgba(0, 0, 0, 0.16);
+  background-color: #2d2e32;
+}
+
+.block__copyright img {
+  width: 8vmin;
+  height: 8vmin;
+}
+
+.footer__container {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
 }
 
 #navbar__desktop {
@@ -11357,7 +11441,7 @@ body::-webkit-scrollbar-thumb {
     width: 100%;
     -webkit-box-shadow: 0 0 3px rgba(0, 0, 0, 0.2);
             box-shadow: 0 0 3px rgba(0, 0, 0, 0.2);
-    background-color: #246BFE;
+    background-color: #246bfe;
     display: -webkit-box;
     display: -ms-flexbox;
     display: flex;
@@ -11410,7 +11494,7 @@ body::-webkit-scrollbar-thumb {
     text-decoration: none;
     -webkit-filter: grayscale(0%) opacity(1);
             filter: grayscale(0%) opacity(1);
-    background-color: #2955E5;
+    background-color: #2955e5;
   }
 }
 
@@ -11418,6 +11502,121 @@ body::-webkit-scrollbar-thumb {
   .nav__mobile {
     display: none;
   }
+}
+
+#about {
+  height: -webkit-fit-content;
+  height: -moz-fit-content;
+  height: fit-content;
+  margin-bottom: 14vmin;
+}
+
+@media (max-width: 1024px) {
+  .container__about {
+    display: -ms-grid;
+    display: grid;
+    gap: 4vmax;
+    -ms-grid-columns: (1fr)[1];
+        grid-template-columns: repeat(1, 1fr);
+  }
+}
+
+@media (min-width: 1024px) {
+  .container__about {
+    display: -ms-grid;
+    display: grid;
+    gap: 4vmax;
+    -ms-grid-columns: (1fr)[2];
+        grid-template-columns: repeat(2, 1fr);
+  }
+}
+
+.block__info {
+  height: -webkit-fit-content;
+  height: -moz-fit-content;
+  height: fit-content;
+}
+
+.block__contact {
+  background-color: #2d2e32;
+  border-radius: 1vmin;
+  height: -webkit-fit-content;
+  height: -moz-fit-content;
+  height: fit-content;
+  padding: 8vmin;
+}
+
+.horizontal-seperator {
+  border-color: #2d2e32;
+}
+
+.info-table {
+  margin: 0;
+  padding: 0;
+}
+
+.social__buttons {
+  margin: 0;
+  padding: 0;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+}
+
+.social__buttons li {
+  list-style: none;
+  margin-top: 1vmin;
+  margin-bottom: 1vmin;
+  margin-right: 3vmin;
+}
+
+.social__buttons li a {
+  position: relative;
+  display: block;
+  width: 8vmin;
+  height: 8vmin;
+  text-align: center;
+  line-height: 8.4vmin;
+  background: #2d2e32;
+  border-radius: 50%;
+  font-size: 4vmin;
+  color: #666;
+  -webkit-transition: 0.5s;
+  transition: 0.5s;
+}
+
+.social__buttons li a::before {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  border-radius: 50%;
+  background: #246bfe;
+  -webkit-transition: 0.5s;
+  transition: 0.5s;
+  -webkit-transform: scale(0.9);
+          transform: scale(0.9);
+  z-index: -1;
+}
+
+.social__buttons li a:hover::before {
+  -webkit-transform: scale(1.1);
+          transform: scale(1.1);
+  -webkit-box-shadow: 0 0 15px #246bfe;
+          box-shadow: 0 0 15px #246bfe;
+}
+
+.social__buttons li a:hover {
+  color: #246bfe;
+  -webkit-box-shadow: 0 0 5px #246bfe;
+          box-shadow: 0 0 5px #246bfe;
+  text-shadow: 0 0 5px #246bfe;
+}
+
+#contact__form {
+  margin-top: 4vmin;
 }
 
 .italic {
@@ -11458,7 +11657,7 @@ body::-webkit-scrollbar-thumb {
 
 @media (max-width: 480px) {
   p {
-    color: rgba(255, 255, 255, 0.3);
+    color: rgba(255, 255, 255, 0.5);
     padding: 0;
     margin: 0;
     font-size: calc(1vw + 1vh);
@@ -11467,7 +11666,7 @@ body::-webkit-scrollbar-thumb {
 
 @media (min-width: 480px) {
   p {
-    color: rgba(255, 255, 255, 0.3);
+    color: rgba(255, 255, 255, 0.5);
     padding: 0;
     margin: 0;
     font-size: calc(0.6vw + 0.6vh);
@@ -11517,7 +11716,7 @@ h6 {
 }
 
 .color-primary {
-  color: #246BFE;
+  color: #246bfe;
 }
 
 .color-dark {
@@ -11525,7 +11724,7 @@ h6 {
 }
 
 .color-dark-light {
-  color: #2D2E32;
+  color: #2d2e32;
 }
 
 .color-white {
@@ -11533,7 +11732,7 @@ h6 {
 }
 
 .bg-primary {
-  background-color: #246BFE;
+  background-color: #246bfe;
 }
 
 .bg-white {
@@ -11549,6 +11748,6 @@ h6 {
 }
 
 .bg-dark-light {
-  background-color: #2D2E32;
+  background-color: #2d2e32;
 }
 /*# sourceMappingURL=styles.css.map */
