--- a/styles/styles.css
+++ b/styles/styles.css
@@ -10983,11 +10983,6 @@ body::-webkit-scrollbar-thumb {
                                   supported by Chrome, Edge, Opera and Firefox */
 }
 
-.block__header-headline .highlight {
-  color: #246bfe;
-  font-weight: 300;
-}
-
 .block__header-info p {
   color: white;
   font-weight: 300;
@@ -11299,6 +11294,56 @@ body::-webkit-scrollbar-thumb {
   -webkit-box-direction: normal;
       -ms-flex-direction: row;
           flex-direction: row;
+}
+
+#projects {
+  height: -webkit-fit-content;
+  height: -moz-fit-content;
+  height: fit-content;
+  margin-bottom: 8vmin;
+}
+
+.container_projects {
+  display: -ms-grid;
+  display: grid;
+  gap: 8vmin;
+  -ms-grid-columns: (1fr)[3];
+      grid-template-columns: repeat(3, 1fr);
+}
+
+.project__card {
+  height: 90vh;
+  border-radius: 1vmin;
+  position: relative;
+  -webkit-transition: 250ms ease-in-out;
+  transition: 250ms ease-in-out;
+  -webkit-box-shadow: 0 20px 20px rgba(0, 0, 0, 0.08);
+          box-shadow: 0 20px 20px rgba(0, 0, 0, 0.08);
+}
+
+.project__card .project_card--info {
+  padding: 10%;
+  position: absolute;
+  left: 0;
+  top: 0;
+}
+
+.project__card .project__card-image {
+  width: 100%;
+  height: 70%;
+  position: absolute;
+  left: 0;
+  bottom: 0;
+  border-radius: 1vmin;
+  background-size: contain;
+  background: url(../res/images/mentorship_banner.png) no-repeat;
+}
+
+.project__card:hover {
+  -webkit-box-shadow: 0 40px 40px rgba(0, 0, 0, 0.16);
+          box-shadow: 0 40px 40px rgba(0, 0, 0, 0.16);
+  -webkit-transform: translate(0, -1vmin);
+          transform: translate(0, -1vmin);
 }
 
 footer {
@@ -11733,6 +11778,10 @@ h6 {
 
 .bg-primary {
   background-color: #246bfe;
+}
+
+.bg-primary-dark {
+  background-color: #2955e5;
 }
 
 .bg-white {
