--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -18,6 +18,12 @@ $font--secondary: "JetBrainsMono";
 $font--primary: "Gilroy";
 $transition--length: 0.8;
 
+
+$pika_games-color: linear-gradient(to right,#FFB22A, #FF685E);
+$eklavya_study-color: linear-gradient(to right,#4BBFAA, #BBCD61);
+$pika_browser-color: linear-gradient(to right,#5EAC24,#91DC5A);
+
+
 $navbar_height: 8vmin;
 
 $button_margin_h: 2.4vmax;
@@ -472,14 +478,15 @@ body::-webkit-scrollbar-thumb {
 
 .container_projects {
   display: grid;
-  gap: 8vmin;
-  grid-template-columns: repeat(3, 1fr);
+  gap: 4vmin;
+  grid-template-columns: repeat(2, 1fr);
 }
 
 .project__card {
-  height: 90vh;
+  min-height: 70vmin;
   border-radius: 1vmin;
   position: relative;
+  overflow: hidden;
   transition: 250ms ease-in-out;
   box-shadow: 0 20px 20px rgba(0, 0, 0, 0.08);
 
@@ -489,24 +496,213 @@ body::-webkit-scrollbar-thumb {
     left: 0;
     top: 0;
   }
-
-  .project__card-image {
-    width: 100%;
-    height: 70%;
-    position: absolute;
-    left: 0;
-    bottom: 0;
-    border-radius: 1vmin;
-    background-size: contain;
-    background: url(../res/images/mentorship_banner.png) no-repeat;
-  }
 }
 
 .project__card:hover {
   box-shadow: 0 40px 40px rgba(0, 0, 0, 0.16);
-  transform: translate(0, -1vmin);
+  //transform: translate(0, -1vmin);
 }
 
+
+
+/* 
+  ##Device = Desktops
+  ##Screen = 1281px to higher resolution desktops
+*/
+
+@media (min-width: 1281px) {
+  
+  /* CSS */
+  .container_projects {
+    grid-template-columns: repeat(3, 1fr);
+  }
+}
+
+/* 
+  ##Device = Laptops, Desktops
+  ##Screen = B/w 1025px to 1280px
+*/
+
+@media (min-width: 1025px) and (max-width: 1280px) {
+  
+  /* CSS */
+  .container_projects {
+    grid-template-columns: repeat(2, 1fr);
+  }
+}
+
+/* 
+  ##Device = Tablets, Ipads (portrait)
+  ##Screen = B/w 768px to 1024px
+*/
+
+@media (min-width: 768px) and (max-width: 1024px) {
+  
+  /* CSS */
+  .container_projects {
+    grid-template-columns: repeat(1, 1fr);
+  }
+}
+
+/* 
+  ##Device = Tablets, Ipads (landscape)
+  ##Screen = B/w 768px to 1024px
+*/
+
+@media (min-width: 768px) and (max-width: 1024px) and (orientation: landscape) {
+  
+  /* CSS */
+  .container_projects {
+    grid-template-columns: repeat(2, 1fr);
+  }
+}
+
+/* 
+  ##Device = Low Resolution Tablets, Mobiles (Landscape)
+  ##Screen = B/w 481px to 767px
+*/
+
+@media (min-width: 481px) and (max-width: 767px) {
+  
+  /* CSS */
+  .container_projects {
+    grid-template-columns: repeat(2, 1fr);
+  }
+}
+
+/* 
+  ##Device = Most of the Smartphones Mobiles (Portrait)
+  ##Screen = B/w 320px to 479px
+*/
+
+@media (min-width: 320px) and (max-width: 480px) {
+  
+  /* CSS */
+  .container_projects {
+    grid-template-columns: repeat(1, 1fr);
+  }
+}
+
+
+
+
+
+#one {
+  background-color: $primary-color;
+
+  .project__card-image {
+    width: 150%;
+    height: 150%;
+    position: absolute;
+    left: 10%;
+    top: 0;
+    margin-top: 18%;
+    border-radius: 1vmin;
+    background-size: cover;
+    background: url(../res/drawables/thumb_smartsevak.svg) no-repeat;
+  }
+
+}
+
+
+
+
+
+
+#three {
+  background: $eklavya_study-color;
+}
+
+#four {
+  background-color: #00A9FE;
+}
+
+#five {
+  background-color: #8C2165;
+
+  #project__card-image {
+    width: 70%;
+    height: auto;
+    position: absolute;
+    left: 13.33%;
+    bottom: 2%;
+    transition: 250ms ease-in-out;
+  }
+
+  #project__card-image:hover {
+    width: 100%;
+    transform-origin: center;
+    transform: rotate(-23deg);
+    transform-origin: center;
+    -webkit-transform: rotate(-23deg);
+    -moz-transform: rotate(-23deg);
+    -ms-transform: rotate(-23deg);
+    -o-transform: rotate(-23deg);
+    bottom: 18%;
+    left: 0;
+  }
+}
+
+
+#two {
+  background-image: $pika_games-color;
+  position: relative;
+
+  #project__card-image {
+    width: 100%;
+    height: auto;
+    position: absolute;
+    left: 18%;
+    bottom: 8%;
+  }
+}
+
+#six {
+  background: $pika_browser-color;
+  position: relative;
+
+  #project__card-image {
+    height: 100%;
+    width: auto;
+    position: absolute;
+    left: 25%;
+    transition: 250ms ease-in-out;
+    transform: rotate(23deg);
+    transform-origin: center;
+    -webkit-transform: rotate(23deg);
+    -moz-transform: rotate(23deg);
+    -ms-transform: rotate(23deg);
+    -o-transform: rotate(23deg);
+    bottom: -36%;
+  }
+
+
+  #project__card-image:hover {
+    height: 120%;
+    transform: rotate(-23deg);
+    transform-origin: center;
+    -webkit-transform: rotate-(23deg);
+    -moz-transform: rotate(-23deg);
+    -ms-transform: rotate(-23deg);
+    -o-transform: rotate(-23deg);
+  }
+}
+
+#seven {
+  background-color: #004953;
+}
+
+#ten {
+  background-color: rgb(48, 213, 219);
+}
+
+#eight {
+  background-color: #F68633;
+}
+
+#nine {
+  background-color: #192B33;
+}
 
 
 //===================================================================================
