--- a/styles/styles.css
+++ b/styles/styles.css
@@ -11312,10 +11312,19 @@ body::-webkit-scrollbar-thumb {
 }
 
 .project__card {
-  min-height: 70vmin;
   border-radius: 1vmin;
   position: relative;
   overflow: hidden;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
   -webkit-transition: 250ms ease-in-out;
   transition: 250ms ease-in-out;
   -webkit-box-shadow: 0 20px 20px rgba(0, 0, 0, 0.08);
@@ -11323,10 +11332,7 @@ body::-webkit-scrollbar-thumb {
 }
 
 .project__card .project_card--info {
-  padding: 10%;
-  position: absolute;
-  left: 0;
-  top: 0;
+  padding: 10% 10% 0% 10%;
 }
 
 .project__card:hover {
@@ -11407,19 +11413,17 @@ body::-webkit-scrollbar-thumb {
 }
 
 #one {
-  background-color: #246bfe;
+  background: #246bfe;
 }
 
-#one .project__card-image {
-  width: 150%;
-  height: 150%;
-  position: absolute;
-  left: 10%;
-  top: 0;
-  margin-top: 18%;
-  border-radius: 1vmin;
-  background-size: cover;
-  background: url(../res/drawables/thumb_smartsevak.svg) no-repeat;
+#two {
+  background: -webkit-gradient(linear, left top, right top, from(#FFB22A), to(#FF685E));
+  background: linear-gradient(to right, #FFB22A, #FF685E);
+}
+
+#six {
+  background: -webkit-gradient(linear, left top, right top, from(#FFB22A), to(#FF685E));
+  background: linear-gradient(to right, #FFB22A, #FF685E);
 }
 
 #three {
@@ -11436,76 +11440,9 @@ body::-webkit-scrollbar-thumb {
 }
 
 #five #project__card-image {
-  width: 70%;
-  height: auto;
-  position: absolute;
-  left: 13.33%;
-  bottom: 2%;
-  -webkit-transition: 250ms ease-in-out;
-  transition: 250ms ease-in-out;
-}
-
-#five #project__card-image:hover {
   width: 100%;
-  -webkit-transform-origin: center;
-          transform-origin: center;
-  transform: rotate(-23deg);
-  transform-origin: center;
-  -webkit-transform: rotate(-23deg);
-  -moz-transform: rotate(-23deg);
-  -ms-transform: rotate(-23deg);
-  -o-transform: rotate(-23deg);
-  bottom: 18%;
-  left: 0;
-}
-
-#two {
-  background-image: -webkit-gradient(linear, left top, right top, from(#FFB22A), to(#FF685E));
-  background-image: linear-gradient(to right, #FFB22A, #FF685E);
-  position: relative;
-}
-
-#two #project__card-image {
-  width: 100%;
-  height: auto;
-  position: absolute;
-  left: 18%;
-  bottom: 8%;
-}
-
-#six {
-  background: -webkit-gradient(linear, left top, right top, from(#5EAC24), to(#91DC5A));
-  background: linear-gradient(to right, #5EAC24, #91DC5A);
-  position: relative;
-}
-
-#six #project__card-image {
   height: 100%;
-  width: auto;
-  position: absolute;
-  left: 25%;
-  -webkit-transition: 250ms ease-in-out;
-  transition: 250ms ease-in-out;
-  transform: rotate(23deg);
-  -webkit-transform-origin: center;
-          transform-origin: center;
-  -webkit-transform: rotate(23deg);
-  -moz-transform: rotate(23deg);
-  -ms-transform: rotate(23deg);
-  -o-transform: rotate(23deg);
-  bottom: -36%;
-}
-
-#six #project__card-image:hover {
-  height: 120%;
-  -webkit-transform: rotate(-23deg);
-          transform: rotate(-23deg);
-  -webkit-transform-origin: center;
-          transform-origin: center;
-  -webkit-transform: rotate-(23deg);
-  -moz-transform: rotate(-23deg);
-  -ms-transform: rotate(-23deg);
-  -o-transform: rotate(-23deg);
+  background-size: cover;
 }
 
 #seven {
