--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -483,19 +483,26 @@ body::-webkit-scrollbar-thumb {
 }
 
 .project__card {
-  min-height: 70vmin;
   border-radius: 1vmin;
   position: relative;
   overflow: hidden;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
   transition: 250ms ease-in-out;
   box-shadow: 0 20px 20px rgba(0, 0, 0, 0.08);
 
   .project_card--info {
-    padding: 10%;
-    position: absolute;
-    left: 0;
-    top: 0;
+    padding: 10% 10% 0% 10%;
+    // position: absolute;
+    // left: 0;
+    // top: 0;
   }
+
+  // img {
+  //   position:absolute; 
+  //   bottom:0
+  // }
 }
 
 .project__card:hover {
@@ -588,22 +595,17 @@ body::-webkit-scrollbar-thumb {
 
 
 #one {
-  background-color: $primary-color;
-
-  .project__card-image {
-    width: 150%;
-    height: 150%;
-    position: absolute;
-    left: 10%;
-    top: 0;
-    margin-top: 18%;
-    border-radius: 1vmin;
-    background-size: cover;
-    background: url(../res/drawables/thumb_smartsevak.svg) no-repeat;
-  }
-
+  background: $primary-color;
 }
 
+
+#two {
+  background: $pika_games-color;
+}
+
+#six {
+  background: $pika_games-color;
+}
 
 
 
@@ -621,72 +623,16 @@ body::-webkit-scrollbar-thumb {
   background-color: #8C2165;
 
   #project__card-image {
-    width: 70%;
-    height: auto;
-    position: absolute;
-    left: 13.33%;
-    bottom: 2%;
-    transition: 250ms ease-in-out;
-  }
-
-  #project__card-image:hover {
     width: 100%;
-    transform-origin: center;
-    transform: rotate(-23deg);
-    transform-origin: center;
-    -webkit-transform: rotate(-23deg);
-    -moz-transform: rotate(-23deg);
-    -ms-transform: rotate(-23deg);
-    -o-transform: rotate(-23deg);
-    bottom: 18%;
-    left: 0;
-  }
-}
-
-
-#two {
-  background-image: $pika_games-color;
-  position: relative;
-
-  #project__card-image {
-    width: 100%;
-    height: auto;
-    position: absolute;
-    left: 18%;
-    bottom: 8%;
-  }
-}
-
-#six {
-  background: $pika_browser-color;
-  position: relative;
-
-  #project__card-image {
     height: 100%;
-    width: auto;
-    position: absolute;
-    left: 25%;
-    transition: 250ms ease-in-out;
-    transform: rotate(23deg);
-    transform-origin: center;
-    -webkit-transform: rotate(23deg);
-    -moz-transform: rotate(23deg);
-    -ms-transform: rotate(23deg);
-    -o-transform: rotate(23deg);
-    bottom: -36%;
-  }
-
-
-  #project__card-image:hover {
-    height: 120%;
-    transform: rotate(-23deg);
-    transform-origin: center;
-    -webkit-transform: rotate-(23deg);
-    -moz-transform: rotate(-23deg);
-    -ms-transform: rotate(-23deg);
-    -o-transform: rotate(-23deg);
+    background-size: cover;
   }
 }
+
+
+
+
+
 
 #seven {
   background-color: #004953;
